add GET and POST to movies and reviews
