# routes/games.js
@@ -4,8 +4,8 @@ const controller = require('../controllers/games-controller');
 //ALL GET REQUESTS
 router.get("/", controller.getGames);
 router.get("/:id", controller.getGameById);
-router.get("/find/:title", controller.getGameByTitle);
-router.get("/find/:genre", controller.getGamesByGenre);
+router.get("/:title", controller.getGameByTitle);
+router.get("/:genre", controller.getGamesByGenre);
 
 //ALL POST REQUESTS
 router.post("/", controller.postGame);
